prevent image overflow

--- a/ui/post.reel/post.css
+++ b/ui/post.reel/post.css
@@ -18,6 +18,11 @@
     color: hsl(0,0%, 20%);
 }
 
+.Post-content img.size-large {
+    width: 100%;
+    height: 100%;
+}
+
 .Post-imageWrapper {
     max-height: 80%; /* Fallback */
     max-height: calc(100% - 5.5em);
